# python-react-monorepo-template

{{cookiecutter.service_name}}/: cookiecutter.json  mkdocs.yaml
{{cookiecutter.service_name}}/apps/backend/: Dockerfile  pyproject.toml
{{cookiecutter.service_name}}/apps/backend/app/: main.py
{{cookiecutter.service_name}}/apps/frontend/: .eslintrc.cjs  Dockerfile  index.html  package.json
{{cookiecutter.service_name}}/apps/frontend/src/: main.tsx
{{cookiecutter.service_name}}/docs/: index.md
