[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
pytest = "^8.0.0"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
